# trixlab

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/crafting/: material.rs  mod.rs  recipe.rs
src/inventory/: item.rs  mod.rs  storage.rs
src/utils/: random.rs
